[gd_scene load_steps=11 format=3 uid="uid://c7xltcmx2w6p5"]

[ext_resource type="PackedScene" uid="uid://c81ugl3yfuic1" path="res://scenes/Map.tscn" id="1_5ch6c"]
[ext_resource type="Script" uid="uid://cqkh4mng0awws" path="res://code/levels.gd" id="1_c6mwt"]
[ext_resource type="PackedScene" uid="uid://yrv80x2vkau4" path="res://scenes/Ben.tscn" id="3_4e448"]
[ext_resource type="PackedScene" uid="uid://cunpmklph2hk2" path="res://scenes/chair.tscn" id="4_cae5c"]
[ext_resource type="PackedScene" uid="uid://dhlcch7mrsbx6" path="res://scenes/Bully.tscn" id="4_elgn6"]
[ext_resource type="PackedScene" uid="uid://oikkpqjwjgvi" path="res://scenes/guard.tscn" id="6_4e448"]
[ext_resource type="PackedScene" uid="uid://c6rq82k7lnr6g" path="res://scenes/quest_board.tscn" id="6_elgn6"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2r41h"]
sky_top_color = Color(0.558754, 0.488987, 0.167721, 1)
sky_horizon_color = Color(0.864537, 0.488386, 0.282655, 1)

[sub_resource type="Sky" id="Sky_2q6dc"]
sky_material = SubResource("ProceduralSkyMaterial_2r41h")
radiance_size = 4

[sub_resource type="Environment" id="Environment_w7c3h"]
background_mode = 2
background_energy_multiplier = 1.69
sky = SubResource("Sky_2q6dc")
sky_custom_fov = 51.4
ambient_light_color = Color(0.517895, 0.373543, 0.0798311, 1)
ambient_light_energy = 8.77
reflected_light_source = 2
tonemap_mode = 2
glow_enabled = true

[node name="Levels" type="Node3D"]
script = ExtResource("1_c6mwt")
morning = 60.0
night = 60.0

[node name="Ben" parent="." groups=["guard"] instance=ExtResource("3_4e448")]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 1.89399, 0, 0)
rotation_order = 0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 15.2284, 0)
light_color = Color(0.798964, 0.724629, 0.516765, 1)
light_energy = 1.8
shadow_enabled = true
shadow_blur = 4.521

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_w7c3h")

[node name="Map" parent="." node_paths=PackedStringArray("Maincharacter") instance=ExtResource("1_5ch6c")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
Maincharacter = NodePath("../Ben")

[node name="Chair" parent="Map" instance=ExtResource("4_cae5c")]
transform = Transform3D(-2.2443, -1.33727e-08, 6.18176e-08, -1.38737e-07, 0.216326, -1.58933e-08, -1.38737e-07, 2.00533e-09, -0.999999, 3.56079, 0.357229, -0.732294)

[node name="Chair2" parent="Map" instance=ExtResource("4_cae5c")]
transform = Transform3D(-2.2443, -1.33727e-08, 6.18176e-08, -1.38737e-07, 0.216326, -1.58933e-08, -1.38737e-07, 2.00533e-09, -0.999999, -0.425502, 0.357229, -0.732294)

[node name="Chair3" parent="Map" instance=ExtResource("4_cae5c")]
transform = Transform3D(-2.2443, -1.33727e-08, 6.18176e-08, -1.38737e-07, 0.216326, -1.58933e-08, -1.38737e-07, 2.00533e-09, -0.999999, -4.95441, 0.357229, -0.732294)

[node name="Bully" parent="." node_paths=PackedStringArray("Maincharacter") instance=ExtResource("4_elgn6")]
transform = Transform3D(-0.00739985, 0, -0.999973, 0, 1, 0, 0.999973, 0, -0.00739985, 4.62242, -0.001019, 7.21465)
Maincharacter = NodePath("../Ben")

[node name="Guard" parent="." instance=ExtResource("6_4e448")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -11.4447, 0.979784, 26.001)

[node name="Time_Ui" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="top-left-Ui" type="HBoxContainer" parent="Time_Ui"]
anchors_preset = -1
anchor_left = 0.0119792
anchor_top = 0.00648148
anchor_right = 0.224479
anchor_bottom = 0.137963
theme_override_constants/separation = 10
alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Text" type="VBoxContainer" parent="Time_Ui/top-left-Ui"]
layout_mode = 2

[node name="Time" type="Label" parent="Time_Ui/top-left-Ui/Text"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Nighttime :"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Days" type="Label" parent="Time_Ui/top-left-Ui/Text"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Day :"
vertical_alignment = 1

[node name="Timer" type="Timer" parent="Time_Ui/top-left-Ui"]
one_shot = true
ignore_time_scale = true

[node name="Value" type="VBoxContainer" parent="Time_Ui/top-left-Ui"]
layout_mode = 2

[node name="Countdown" type="Label" parent="Time_Ui/top-left-Ui/Value"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "00:00"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DayCounts" type="Label" parent="Time_Ui/top-left-Ui/Value"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "00"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="center2" type="ColorRect" parent="Time_Ui"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -6.0
offset_right = 2.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.56761
pivot_offset = Vector2(2, 6)

[node name="Ben" parent="Time_Ui" instance=ExtResource("3_4e448")]
transform = Transform3D(0.852704, 0, 0.522394, 0, 1, 0, -0.522394, 0, 0.852704, 9.53674e-07, 1.04074, 4.24781)
visible = false
slide_on_ceiling = false

[node name="QuestBoard" parent="." instance=ExtResource("6_elgn6")]
transform = Transform3D(5.76205e-08, 0, -1, 0, 1, 0, 1, 0, 5.76205e-08, 1.90982, 1.36651, -7.42103)

[connection signal="Day_state" from="." to="QuestBoard" method="_on_levels_day_state"]
[connection signal="exam_time" from="Map" to="." method="_on_map_exam_time"]
[connection signal="detected" from="Bully" to="Ben" method="_on_bully_detected"]
[connection signal="start_day" from="Bully" to="." method="_on_bully_start_day"]
[connection signal="showui" from="Time_Ui/Ben" to="." method="_on_ben_showui"]
